--- a/ScrumTools/ScrumTools.UWP/project.json
+++ b/ScrumTools/ScrumTools.UWP/project.json
@@ -3,6 +3,7 @@
     "FreshMvvm": "2.2.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "UXDivers.GorillaPlayer.SDK": "1.0.0.15",
+    "Xam.Plugins.Settings": "3.0.1",
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
