--- a/ScrumTools/ScrumTools.Android/packages.config
+++ b/ScrumTools/ScrumTools.Android/packages.config
@@ -6,6 +6,7 @@
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="monoandroid71" />
   <package id="UXDivers.GorillaPlayer.SDK" version="1.0.0.15" targetFramework="monoandroid71" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="monoandroid71" />
+  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
