--- a/ScrumTools/ScrumTools.iOS/packages.config
+++ b/ScrumTools/ScrumTools.iOS/packages.config
@@ -6,5 +6,6 @@
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="xamarinios10" />
   <package id="UXDivers.GorillaPlayer.SDK" version="1.0.0.15" targetFramework="xamarinios10" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="3.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="xamarinios10" />
 </packages>
