Minor display changes at MainPage

--- a/ScrumTools/ScrumTools.UWP/ScrumTools.UWP.csproj
+++ b/ScrumTools/ScrumTools.UWP/ScrumTools.UWP.csproj
@@ -108,6 +108,56 @@
     <None Include="ScrumTools.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\brownie.png" />
+    <Content Include="Assets\brownie_l.png" />
+    <Content Include="Assets\brownie_t.png" />
+    <Content Include="Assets\cards.png" />
+    <Content Include="Assets\cover.png" />
+    <Content Include="Assets\documents.png" />
+    <Content Include="Assets\est1.png" />
+    <Content Include="Assets\est100.png" />
+    <Content Include="Assets\est100_l.png" />
+    <Content Include="Assets\est100_t.png" />
+    <Content Include="Assets\est13.png" />
+    <Content Include="Assets\est13_l.png" />
+    <Content Include="Assets\est13_t.png" />
+    <Content Include="Assets\est1_l.png" />
+    <Content Include="Assets\est1_t.png" />
+    <Content Include="Assets\est2.png" />
+    <Content Include="Assets\est20.png" />
+    <Content Include="Assets\est20_l.png" />
+    <Content Include="Assets\est20_t.png" />
+    <Content Include="Assets\est2_l.png" />
+    <Content Include="Assets\est2_t.png" />
+    <Content Include="Assets\est3.png" />
+    <Content Include="Assets\est3_l.png" />
+    <Content Include="Assets\est3_t.png" />
+    <Content Include="Assets\est40.png" />
+    <Content Include="Assets\est40_l.png" />
+    <Content Include="Assets\est40_t.png" />
+    <Content Include="Assets\est5.png" />
+    <Content Include="Assets\est5_l.png" />
+    <Content Include="Assets\est5_t.png" />
+    <Content Include="Assets\est8.png" />
+    <Content Include="Assets\est8_l.png" />
+    <Content Include="Assets\est8_t.png" />
+    <Content Include="Assets\freak.png" />
+    <Content Include="Assets\hourglass.png" />
+    <Content Include="Assets\icon.png" />
+    <Content Include="Assets\inf.png" />
+    <Content Include="Assets\info.png" />
+    <Content Include="Assets\inf_l.png" />
+    <Content Include="Assets\inf_t.png" />
+    <Content Include="Assets\pp.png" />
+    <Content Include="Assets\pp_l.png" />
+    <Content Include="Assets\pp_t.png" />
+    <Content Include="Assets\settings.png" />
+    <Content Include="Assets\unk.png" />
+    <Content Include="Assets\unk_l.png" />
+    <Content Include="Assets\unk_t.png" />
+    <Content Include="Assets\yak.png" />
+    <Content Include="Assets\yak_l.png" />
+    <Content Include="Assets\yak_t.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-100.png" />
     <Content Include="Assets\LockScreenLogo.scale-125.png" />
