--- a/ScrumTools/ScrumTools.Android/Properties/AndroidManifest.xml
+++ b/ScrumTools/ScrumTools.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1" android:versionName="1.0" package="com.juanlopez.scrumtools">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="ScrumTools.Android" android:icon="@drawable/info"></application>
+	<application android:label="Scrum Tools" android:icon="@drawable/icon"></application>
 </manifest>
