--- a/ScrumTools/ScrumTools/ScrumTools.csproj
+++ b/ScrumTools/ScrumTools/ScrumTools.csproj
@@ -78,6 +78,12 @@
       <DependentUpon>TimerPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Strings\AppResources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AppResources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\Strings\TranslateExtension.cs" />
     <Compile Include="Services\CardsService.cs" />
     <Compile Include="Services\DocsService.cs" />
   </ItemGroup>
@@ -89,6 +95,10 @@
     <EmbeddedResource Include="App.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\Strings\AppResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
