--- a/ScrumTools/ScrumTools.Android/ScrumTools.Android.csproj
+++ b/ScrumTools/ScrumTools.Android/ScrumTools.Android.csproj
@@ -310,6 +310,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\scrum.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\hourglass.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
