--- a/ScrumTools/ScrumTools/ScrumTools.csproj
+++ b/ScrumTools/ScrumTools/ScrumTools.csproj
@@ -46,6 +46,7 @@
     <Compile Include="PageModels\CardsGridPageModel.cs" />
     <Compile Include="PageModels\CardsListPageModel.cs" />
     <Compile Include="PageModels\ComingSoonPageModel.cs" />
+    <Compile Include="PageModels\DocPageModel.cs" />
     <Compile Include="PageModels\DocsListPageModel.cs" />
     <Compile Include="PageModels\MainPageModel.cs" />
     <Compile Include="PageModels\SettingsPageModel.cs" />
@@ -64,6 +65,9 @@
     </Compile>
     <Compile Include="Pages\ComingSoonPage.xaml.cs">
       <DependentUpon>ComingSoonPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\DocPage.xaml.cs">
+      <DependentUpon>DocPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\DocsListPage.xaml.cs">
       <DependentUpon>DocsListPage.xaml</DependentUpon>
@@ -190,6 +194,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Pages\DocsListPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\DocPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
