--- a/ScrumTools/ScrumTools.iOS/packages.config
+++ b/ScrumTools/ScrumTools.iOS/packages.config
@@ -5,10 +5,11 @@
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Mobilist.AdvancedTimer.Forms.Plugin" version="1.0.1.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
   <package id="SocketIoClientDotNet" version="1.0.3" targetFramework="xamarinios10" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="xamarinios10" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.14" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
@@ -32,7 +33,7 @@
   <package id="System.Net.NameResolution" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Security" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
@@ -63,5 +64,5 @@
   <package id="UXDivers.GorillaPlayer.SDK" version="1.1.0.4" targetFramework="xamarinios10" />
   <package id="WebSocket4Net" version="0.15.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.4.0.18342" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.4.0.38779" targetFramework="xamarinios10" />
 </packages>
