--- a/ScrumTools/ScrumTools.Android/packages.config
+++ b/ScrumTools/ScrumTools.Android/packages.config
@@ -1,16 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="monoandroid71" />
+  <package id="EngineIoClientDotNet" version="1.0.3" targetFramework="monoandroid71" />
   <package id="FreshMvvm" version="2.2.3" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
-  <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="monoandroid71" />
+  <package id="SocketIoClientDotNet" version="1.0.3" targetFramework="monoandroid71" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="monoandroid71" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Console" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid71" />
@@ -25,8 +28,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Security" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
@@ -44,7 +50,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid71" />
@@ -55,7 +61,7 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="UXDivers.GorillaPlayer.SDK" version="1.1.0.4" targetFramework="monoandroid71" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="monoandroid71" />
+  <package id="WebSocket4Net" version="0.15.0" targetFramework="monoandroid71" />
   <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
@@ -65,5 +71,5 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.4.0.18342" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="2.4.0.38779" targetFramework="monoandroid71" />
 </packages>
